Nouvelle logique fonctionnelle.. On passe aux frontend avant de revoir les JavaDocs et qualité du code.